Version 0.4.0:
- MetaWhere interoperability
- Tested with Rails 3.0.0

Version 0.3.1:
- Re-release of 0.3.0 to pick up missed files

Version 0.3.0:
- Support for Rails 3.0.0.rc2
- NOTE: no longer compatible with Rails 3.0.0.rc

Version 0.2.2:
- Cosmetic change: simply gemfile description

Version 0.2.1:
- Support for JRuby 1.5.1
- Support for ActiveRecord 2.3.8

Version 0.2.0:
- Support for Arel predicates

Version 0.1.0:
- Initial release