@@ -1,3 +1,7 @@
+Upcoming:
+- Default name of underlying attribute can be overridden with the :attribute
+  option
+
 Version 0.4.0:
 - MetaWhere interoperability
 - Tested with Rails 3.0.0
